--- a/devel/cppcheck/Makefile
+++ b/devel/cppcheck/Makefile
@@ -35,7 +35,7 @@ TEST_USE=		QT=testlib
 
 HTMLREPORT_DESC=	Install cppcheck-htmlreport
 HTMLREPORT_USES=	python:${PYUSE:C/ /,/W}
-HTMLREPORT_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}Pygments>0:textproc/py-pygments@${PY_FLAVOR}
+HTMLREPORT_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pygments>0:textproc/py-pygments@${PY_FLAVOR}
 HTMLREPORT_PLIST_FILES=	bin/cppcheck-htmlreport
 HTMLREPORT_VARS=	PYUSE+=run
 
