--- a/devel/py-colored-traceback/Makefile
+++ b/devel/py-colored-traceback/Makefile
@@ -10,7 +10,7 @@ WWW=		https://pypi.org/project/colored-traceback/
 
 LICENSE=	ISCL
 
-RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}Pygments>0:textproc/py-pygments@${PY_FLAVOR}
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pygments>0:textproc/py-pygments@${PY_FLAVOR}
 
 USES=		python
 USE_PYTHON=	autoplist distutils
