--- a/graphics/py-traitsui/Makefile
+++ b/graphics/py-traitsui/Makefile
@@ -32,7 +32,7 @@ PYSIDE_DESC=	PySide backend
 WXPYTHON_DESC=	wxPython backend
 
 PYSIDE_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pyside2>=0:devel/pyside2@${PY_FLAVOR}
-QT5_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}Pygments>=0:textproc/py-pygments@${PY_FLAVOR}
+QT5_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pygments>=0:textproc/py-pygments@${PY_FLAVOR}
 QT5_USES=		pyqt:5
 QT5_USE=		PYQT=pyqt5:run
 WXPYTHON_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}wxPython42>0:x11-toolkits/py-wxPython4@${PY_FLAVOR}
