--- a/science/py-vedo/Makefile
+++ b/science/py-vedo/Makefile
@@ -13,7 +13,7 @@ LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}Deprecated>0:devel/py-deprecated@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}Pygments>0:textproc/py-pygments@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}pygments>0:textproc/py-pygments@${PY_FLAVOR} \
 		${PYNUMPY} \
 		vtk${VTK_VER:R}>0:math/vtk${VTK_VER:R} \
 		bash:shells/bash
