--- a/devel/py-mrkd/Makefile
+++ b/devel/py-mrkd/Makefile
@@ -17,7 +17,7 @@ BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}packaging>=21.3:devel/py-packaging@${PY_FL
 RUN_DEPENDS=	${BUILD_DEPENDS} \
 		${PYTHON_PKGNAMEPREFIX}Jinja2>=3.0.1:devel/py-Jinja2@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}mistune0>=0.8.4:textproc/py-mistune0@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}Pygments>=2.7.2:textproc/py-pygments@${PY_FLAVOR}
+		${PYTHON_PKGNAMEPREFIX}pygments>=2.7.2:textproc/py-pygments@${PY_FLAVOR}
 
 USES=		python
 USE_PYTHON=	autoplist distutils flavors
