--- a/devel/py-prettyprinter/Makefile
+++ b/devel/py-prettyprinter/Makefile
@@ -14,7 +14,7 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pytest-runner>0:devel/py-pytest-runner@${PY_FLAVOR}
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}colorful>=0.4.0:devel/py-colorful@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}Pygments>=2.2.0:textproc/py-pygments@${PY_FLAVOR}
+		${PYTHON_PKGNAMEPREFIX}pygments>=2.2.0:textproc/py-pygments@${PY_FLAVOR}
 
 USES=		python
 USE_PYTHON=	autoplist distutils
