--- a/devel/radian/Makefile
+++ b/devel/radian/Makefile
@@ -11,7 +11,7 @@ LICENSE=	MIT
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pytest-runner>0:devel/py-pytest-runner@${PY_FLAVOR}
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}lineedit>=0.1.4,<0.2.0:devel/py-lineedit@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}Pygments>=2.5.0:textproc/py-pygments@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}pygments>=2.5.0:textproc/py-pygments@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}rchitect>=0.3.17,<0.4.0:devel/py-rchitect@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}six>=1.9.0:devel/py-six@${PY_FLAVOR}
 
