--- a/devel/viewvc-devel/Makefile
+++ b/devel/viewvc-devel/Makefile
@@ -36,7 +36,7 @@ MODWSGI_RUN_DEPENDS=	${APACHE_PKGNAMEPREFIX}${PYTHON_PKGNAMEPREFIX}mod_wsgi>=4.4
 
 SUBVERSION_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}subversion>=0:devel/py-subversion@${PY_FLAVOR}
 
-RUN_DEPENDS+=		${PYTHON_PKGNAMEPREFIX}Pygments>=1.1:textproc/py-pygments@${PY_FLAVOR}
+RUN_DEPENDS+=		${PYTHON_PKGNAMEPREFIX}pygments>=1.1:textproc/py-pygments@${PY_FLAVOR}
 
 CONFLICTS_INSTALL=	viewvc-1.[12].[0-9]*
 
