--- a/sysutils/mog/Makefile
+++ b/sysutils/mog/Makefile
@@ -10,7 +10,7 @@ WWW=		https://github.com/witchard/mog/
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
-BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}Pygments>=0:textproc/py-pygments@${PY_FLAVOR} \
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pygments>=0:textproc/py-pygments@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}mdv>0:devel/py-mdv@${PY_FLAVOR}
 RUN_DEPENDS:=	${BUILD_DEPENDS}
 
