--- a/textproc/py-rich12/Makefile
+++ b/textproc/py-rich12/Makefile
@@ -15,7 +15,7 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}poetry-core>=1.0.0:devel/py-poetry-core@${PY_FLAVOR}
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}CommonMark>=0.9.0<0.10.0:textproc/py-CommonMark@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}Pygments>=2.6.0<3.0.0:textproc/py-pygments@${PY_FLAVOR}
+		${PYTHON_PKGNAMEPREFIX}pygments>=2.6.0<3.0.0:textproc/py-pygments@${PY_FLAVOR}
 
 USES=		python
 USE_PYTHON=	autoplist concurrent pep517
