archivers/py-brotli: lowercase again

--- a/devel/py-geventhttpclient/Makefile
+++ b/devel/py-geventhttpclient/Makefile
@@ -11,7 +11,7 @@ WWW=		https://github.com/geventhttpclient/geventhttpclient
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
-RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}Brotli>=0:archivers/py-brotli@${PY_FLAVOR} \
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}brotli>=0:archivers/py-brotli@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}certifi>=0:security/py-certifi@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}gevent>=0.13:devel/py-gevent@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}six>=0:devel/py-six@${PY_FLAVOR}
