--- a/archivers/py-brotli/Makefile
+++ b/archivers/py-brotli/Makefile
@@ -4,6 +4,7 @@ PORTREVISION=	1
 CATEGORIES=	archivers python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
+DISTNAME=	Brotli-${PORTVERSION}
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Generic-purpose lossless compression algorithm
